--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </title>
 </head>
 <body>
-    
+    <h1>ekhon dekha jak koto tuku kaj korte pari ami</h1>
+    <p>dekh mama ami to ekhon valoi voloi problem ta solve kore fellam ,ekhon theke amio website banate shuru korbo </p>
 </body>
 </html>
