--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kaj kore na
     </title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>ekhon dekha jak koto tuku kaj korte pari ami</h1>
